--- a/final.html
+++ b/final.html
@@ -2,60 +2,60 @@
 <html lang="pt-br">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Newsletter Leitura - Fevereiro</title>
 </head>
 <body style="margin: 0; padding: 0; background-color: #f4f4f4; font-family: Arial, sans-serif;">
-    <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px; background-color: #ffffff; border-collapse: collapse;">
+    <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px; background-color: #ffffff;">
         
         <tr>
             <td align="center" style="padding: 20px; background-color: #fdfaf5;">
-                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/LOGO_HORIZONTAL_BEIGE%201.png" alt="Livraria Leitura" style="width: 200px; display: block; border: 0;">
+                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/LOGO_HORIZONTAL_BEIGE%201.png" width="180" style="display: block; border: 0;">
             </td>
         </tr>
 
         <tr>
-            <td align="center" style="background-color: #2196f3; padding: 40px 20px; position: relative;">
-                <h1 style="color: #ffffff; margin: 0; font-size: 28px;">Oi, pessoal! Aqui é a Lê! 👋</h1>
-                <p style="color: #ffffff; font-size: 18px; line-height: 1.5;">Estamos no encerramento da nossa campanha de <strong>Volta às Aulas</strong>. É a última chamada!</p>
-                <div style="margin-top: 20px;">
-                    <a href="https://leitura.com.br" style="background-color: #ffffff; color: #2196f3; padding: 12px 25px; text-decoration: none; border-radius: 5px; font-weight: bold; display: inline-block;">APROVEITAR AGORA</a>
+            <td style="padding: 30px; background-color: #0033a0; color: #ffffff; text-align: center;">
+                <h1 style="margin: 0; font-size: 24px;">Oi, pessoal! Aqui é a Lê! 👋</h1>
+                <p style="font-size: 16px; line-height: 1.5;">Estamos encerrando o nosso <strong>Volta às Aulas</strong>. É a sua última chance de garantir tudo com preços especiais!</p>
+                <div style="margin-top: 15px;">
+                    <a href="https://leitura.com.br" style="background-color: #ffffff; color: #0033a0; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-weight: bold; display: inline-block;">APROVEITAR AGORA</a>
                 </div>
             </td>
         </tr>
 
         <tr>
             <td style="padding: 40px 20px;">
-                <div style="text-align: center; margin-bottom: 30px;">
-                    <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/mask_carnival%201.png" alt="Carnaval" style="width: 60px; margin-bottom: 10px;">
+                <div style="text-align: center; margin-bottom: 25px;">
+                    <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/mask_carnival%201.png" width="50" style="margin-bottom: 10px;">
                     <h2 style="color: #e91e63; margin: 0;">🎭 O Carnaval da Lê: Biografias na Avenida</h2>
                 </div>
 
-                <table width="100%" border="0" cellspacing="0" cellpadding="10">
+                <table width="100%" border="0" cellspacing="10" cellpadding="0">
                     <tr>
-                        <td width="50%" align="center">
+                        <td align="center" width="50%" style="padding-bottom: 20px;">
                             <a href="https://leitura.com.br/rita-lee-L999-9788525063304" style="text-decoration: none; color: #333;">
-                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/ritalee.png" width="120" style="border-radius: 8px;"><br>
-                                <strong>Rita Lee</strong> (Mocidade)
+                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/ritalee.png" width="130" style="border-radius: 8px; border: 0;"><br>
+                                <span style="display: block; margin-top: 5px;"><strong>Rita Lee</strong></span>
                             </a>
                         </td>
-                        <td width="50%" align="center">
+                        <td align="center" width="50%" style="padding-bottom: 20px;">
                             <a href="https://leitura.com.br/quarto-de-despejo---diario-de-uma-favelada-L999-9788508171279" style="text-decoration: none; color: #333;">
-                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/quarto.png" width="120" style="border-radius: 8px;"><br>
-                                <strong>C. Maria de Jesus</strong> (Tijuca)
+                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/quarto.png" width="130" style="border-radius: 8px; border: 0;"><br>
+                                <span style="display: block; margin-top: 5px;"><strong>Carolina Maria de Jesus</strong></span>
                             </a>
                         </td>
                     </tr>
                     <tr>
-                        <td width="50%" align="center">
+                        <td align="center" width="50%">
                             <a href="https://leitura.com.br/ney-matogrosso-L999-9786559210923" style="text-decoration: none; color: #333;">
-                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/Neymatogross.png" width="120" style="border-radius: 8px;"><br>
-                                <strong>Ney Matogrosso</strong> (Imperatriz)
+                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/Neymatogross.png" width="130" style="border-radius: 8px; border: 0;"><br>
+                                <span style="display: block; margin-top: 5px;"><strong>Ney Matogrosso</strong></span>
                             </a>
                         </td>
-                        <td width="50%" align="center">
+                        <td align="center" width="50%">
                             <a href="https://leitura.com.br/lula-volume-1-L999-9786559212927" style="text-decoration: none; color: #333;">
-                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/lula.png" width="120" style="border-radius: 8px;"><br>
-                                <strong>Lula</strong> (Niterói)
+                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/lula.png" width="130" style="border-radius: 8px; border: 0;"><br>
+                                <span style="display: block; margin-top: 5px;"><strong>Lula - Vol 1</strong></span>
                             </a>
                         </td>
                     </tr>
@@ -64,17 +64,10 @@
         </tr>
 
         <tr>
-            <td align="center" style="padding: 30px; background-color: #fffaf0; border-top: 2px dashed #eee;">
-                <p style="font-size: 16px; margin: 0;">🎁 <strong>Mimo da Lê:</strong> Baixe agora o primeiro capítulo de <strong>"Mulher em Queda"</strong>!</p>
-                <a href="#" style="color: #e91e63; font-weight: bold; text-decoration: underline;">Clique aqui para baixar</a>
-            </td>
-        </tr>
-
-        <tr>
-            <td align="center" style="padding: 40px 20px; background-color: #25d366;">
-                <a href="COLE_AQUI_O_LINK_DO_SEU_CANAL" style="text-decoration: none; color: #ffffff;">
-                    <h3 style="margin: 0; font-size: 20px;">Vem pro meu Canal no WhatsApp! 📲</h3>
-                    <p style="margin: 5px 0 0;">Promoções e dicas da Lê todo santo dia!</p>
+            <td align="center" style="padding: 30px; background-color: #25d366; color: #ffffff;">
+                <a href="COLE_AQUI_LINK_WHATSAPP" style="text-decoration: none; color: #ffffff;">
+                    <strong style="font-size: 18px;">Vem pro meu Canal no WhatsApp! 📲</strong><br>
+                    <span>Dicas da Lê e promoções diárias!</span>
                 </a>
             </td>
         </tr>
