--- a/final.html
+++ b/final.html
@@ -2,73 +2,28 @@
 <html lang="pt-br">
 <head>
     <meta charset="utf-8">
-    <title>Newsletter Leitura - Fevereiro</title>
+    <title>Newsletter Leitura</title>
 </head>
-<body style="margin: 0; padding: 0; background-color: #f4f4f4; font-family: Arial, sans-serif;">
-    <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px; background-color: #ffffff;">
-        
+<body style="margin: 0; padding: 0; background-color: #ffffff; font-family: Arial, sans-serif;">
+    <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
         <tr>
-            <td align="center" style="padding: 20px; background-color: #fdfaf5;">
-                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/LOGO_HORIZONTAL_BEIGE%201.png" width="180" style="display: block; border: 0;">
+            <td style="background-color: #0033a0; height: 226px; text-align: center; vertical-align: middle; padding: 20px;">
+                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/LOGO_HORIZONTAL_BEIGE%201.png" alt="Leitura" style="width: 250px; display: block; margin: 0 auto;">
             </td>
         </tr>
-
         <tr>
-            <td style="padding: 30px; background-color: #0033a0; color: #ffffff; text-align: center;">
-                <h1 style="margin: 0; font-size: 24px;">Oi, pessoal! Aqui é a Lê! 👋</h1>
-                <p style="font-size: 16px; line-height: 1.5;">Estamos encerrando o nosso <strong>Volta às Aulas</strong>. É a sua última chance de garantir tudo com preços especiais!</p>
-                <div style="margin-top: 15px;">
-                    <a href="https://leitura.com.br" style="background-color: #ffffff; color: #0033a0; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-weight: bold; display: inline-block;">APROVEITAR AGORA</a>
-                </div>
-            </td>
-        </tr>
-
-        <tr>
-            <td style="padding: 40px 20px;">
-                <div style="text-align: center; margin-bottom: 25px;">
-                    <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/mask_carnival%201.png" width="50" style="margin-bottom: 10px;">
-                    <h2 style="color: #e91e63; margin: 0;">🎭 O Carnaval da Lê: Biografias na Avenida</h2>
-                </div>
-
+            <td style="padding: 40px 20px; text-align: center;">
+                <h2 style="color: #e91e63;">🎭 O Carnaval da Lê: Biografias na Avenida</h2>
                 <table width="100%" border="0" cellspacing="10" cellpadding="0">
                     <tr>
-                        <td align="center" width="50%" style="padding-bottom: 20px;">
-                            <a href="https://leitura.com.br/rita-lee-L999-9788525063304" style="text-decoration: none; color: #333;">
-                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/ritalee.png" width="130" style="border-radius: 8px; border: 0;"><br>
-                                <span style="display: block; margin-top: 5px;"><strong>Rita Lee</strong></span>
-                            </a>
-                        </td>
-                        <td align="center" width="50%" style="padding-bottom: 20px;">
-                            <a href="https://leitura.com.br/quarto-de-despejo---diario-de-uma-favelada-L999-9788508171279" style="text-decoration: none; color: #333;">
-                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/quarto.png" width="130" style="border-radius: 8px; border: 0;"><br>
-                                <span style="display: block; margin-top: 5px;"><strong>Carolina Maria de Jesus</strong></span>
-                            </a>
-                        </td>
+                        <td align="center"><a href="https://leitura.com.br/rita-lee-L999-9788525063304"><img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/ritalee.png" width="130"></a></td>
+                        <td align="center"><a href="https://leitura.com.br/quarto-de-despejo---diario-de-uma-favelada-L999-9788508171279"><img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/quarto.png" width="130"></a></td>
                     </tr>
                     <tr>
-                        <td align="center" width="50%">
-                            <a href="https://leitura.com.br/ney-matogrosso-L999-9786559210923" style="text-decoration: none; color: #333;">
-                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/Neymatogross.png" width="130" style="border-radius: 8px; border: 0;"><br>
-                                <span style="display: block; margin-top: 5px;"><strong>Ney Matogrosso</strong></span>
-                            </a>
-                        </td>
-                        <td align="center" width="50%">
-                            <a href="https://leitura.com.br/lula-volume-1-L999-9786559212927" style="text-decoration: none; color: #333;">
-                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/lula.png" width="130" style="border-radius: 8px; border: 0;"><br>
-                                <span style="display: block; margin-top: 5px;"><strong>Lula - Vol 1</strong></span>
-                            </a>
-                        </td>
+                        <td align="center"><a href="https://leitura.com.br/ney-matogrosso-L999-9786559210923"><img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/Neymatogross.png" width="130"></a></td>
+                        <td align="center"><a href="https://leitura.com.br/lula-volume-1-L999-9786559212927"><img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/lula.png" width="130"></a></td>
                     </tr>
                 </table>
-            </td>
-        </tr>
-
-        <tr>
-            <td align="center" style="padding: 30px; background-color: #25d366; color: #ffffff;">
-                <a href="COLE_AQUI_LINK_WHATSAPP" style="text-decoration: none; color: #ffffff;">
-                    <strong style="font-size: 18px;">Vem pro meu Canal no WhatsApp! 📲</strong><br>
-                    <span>Dicas da Lê e promoções diárias!</span>
-                </a>
             </td>
         </tr>
     </table>
