--- a/final.html
+++ b/final.html
@@ -2,13 +2,12 @@
 <html lang="pt-br">
 <head>
     <meta charset="utf-8">
-    <title>Newsletter Leitura</title>
 </head>
 <body style="margin: 0; padding: 0; background-color: #ffffff; font-family: Arial, sans-serif;">
     <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
         <tr>
             <td style="background-color: #0033a0; height: 226px; text-align: center; vertical-align: middle; padding: 20px;">
-                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/LOGO_HORIZONTAL_BEIGE%201.png" alt="Leitura" style="width: 250px; display: block; margin: 0 auto;">
+                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/LOGO_HORIZONTAL_BEIGE%201.png" alt="Leitura" style="width: 250px; display: block; margin: 0 auto; border: 0;">
             </td>
         </tr>
         <tr>
@@ -16,12 +15,28 @@
                 <h2 style="color: #e91e63;">🎭 O Carnaval da Lê: Biografias na Avenida</h2>
                 <table width="100%" border="0" cellspacing="10" cellpadding="0">
                     <tr>
-                        <td align="center"><a href="https://leitura.com.br/rita-lee-L999-9788525063304"><img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/ritalee.png" width="130"></a></td>
-                        <td align="center"><a href="https://leitura.com.br/quarto-de-despejo---diario-de-uma-favelada-L999-9788508171279"><img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/quarto.png" width="130"></a></td>
+                        <td align="center">
+                            <a href="https://leitura.com.br/rita-lee-L999-9788525063304">
+                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/ritalee.png" width="130" style="border-radius: 8px; border: 0;">
+                            </a>
+                        </td>
+                        <td align="center">
+                            <a href="https://leitura.com.br/quarto-de-despejo---diario-de-uma-favelada-L999-9788508171279">
+                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/quarto.png" width="130" style="border-radius: 8px; border: 0;">
+                            </a>
+                        </td>
                     </tr>
                     <tr>
-                        <td align="center"><a href="https://leitura.com.br/ney-matogrosso-L999-9786559210923"><img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/Neymatogross.png" width="130"></a></td>
-                        <td align="center"><a href="https://leitura.com.br/lula-volume-1-L999-9786559212927"><img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/lula.png" width="130"></a></td>
+                        <td align="center">
+                            <a href="https://leitura.com.br/ney-matogrosso-L999-9786559210923">
+                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/Neymatogross.png" width="130" style="border-radius: 8px; border: 0;">
+                            </a>
+                        </td>
+                        <td align="center">
+                            <a href="https://leitura.com.br/lula-volume-1-L999-9786559212927">
+                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/lula.png" width="130" style="border-radius: 8px; border: 0;">
+                            </a>
+                        </td>
                     </tr>
                 </table>
             </td>
