--- a/index.html
+++ b/index.html
@@ -4,37 +4,40 @@
     <meta charset="utf-8">
 </head>
 <body style="margin: 0; padding: 0; background-color: #ffffff; font-family: Arial, sans-serif;">
-    <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
+    <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px; border-collapse: collapse;">
+        
         <tr>
-            <td style="background-color: #0033a0; height: 226px; text-align: center; vertical-align: middle; padding: 20px;">
-                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/LOGO_HORIZONTAL_BEIGE%201.png" alt="Leitura" style="width: 250px; display: block; margin: 0 auto; border: 0;">
+            <td align="center" style="background-color: #0033a0; height: 226px; padding: 20px; vertical-align: middle;">
+                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/LOGO_HORIZONTAL_BEIGE%201.png" width="220" style="display: block; border: 0;">
             </td>
         </tr>
+
         <tr>
-            <td style="padding: 40px 20px; text-align: center;">
-                <h2 style="color: #e91e63;">🎭 O Carnaval da Lê: Biografias na Avenida</h2>
-                <table width="100%" border="0" cellspacing="10" cellpadding="0">
+            <td style="padding: 30px; text-align: center; background-color: #ffffff;">
+                <h2 style="color: #e91e63; font-size: 24px; margin-bottom: 20px;">🎭 Carnaval da Lê: Biografias na Avenida</h2>
+                
+                <table width="100%" border="0" cellspacing="15" cellpadding="0">
                     <tr>
-                        <td align="center">
-                            <a href="https://leitura.com.br/rita-lee-L999-9788525063304">
-                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/ritalee.png" width="130" style="border-radius: 8px; border: 0;">
+                        <td align="center" width="50%">
+                            <a href="https://leitura.com.br/rita-lee-L999-9788525063304" style="text-decoration: none;">
+                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/ritalee.png" width="140" style="border-radius: 10px; border: 0; display: block;">
                             </a>
                         </td>
-                        <td align="center">
-                            <a href="https://leitura.com.br/quarto-de-despejo---diario-de-uma-favelada-L999-9788508171279">
-                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/quarto.png" width="130" style="border-radius: 8px; border: 0;">
+                        <td align="center" width="50%">
+                            <a href="https://leitura.com.br/quarto-de-despejo---diario-de-uma-favelada-L999-9788508171279" style="text-decoration: none;">
+                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/quarto.png" width="140" style="border-radius: 10px; border: 0; display: block;">
                             </a>
                         </td>
                     </tr>
                     <tr>
                         <td align="center">
-                            <a href="https://leitura.com.br/ney-matogrosso-L999-9786559210923">
-                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/Neymatogross.png" width="130" style="border-radius: 8px; border: 0;">
+                            <a href="https://leitura.com.br/ney-matogrosso-L999-9786559210923" style="text-decoration: none;">
+                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/Neymatogross.png" width="140" style="border-radius: 10px; border: 0; display: block;">
                             </a>
                         </td>
                         <td align="center">
-                            <a href="https://leitura.com.br/lula-volume-1-L999-9786559212927">
-                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/lula.png" width="130" style="border-radius: 8px; border: 0;">
+                            <a href="https://leitura.com.br/lula-volume-1-L999-9786559212927" style="text-decoration: none;">
+                                <img src="https://raw.githubusercontent.com/leleiturateles-cyber/news/main/lula.png" width="140" style="border-radius: 10px; border: 0; display: block;">
                             </a>
                         </td>
                     </tr>
