--- a/index.html
+++ b/index.html
@@ -1,35 +1,63 @@
-<section class="carnaval-section">
-    <h2>🎭 O Carnaval da Lê: Biografias que vão Brilhar na Avenida</h2>
-    
-    <div class="book-row">
-        <div class="book-img nermatogross"></div>
-        <div class="book-info">
-            <p class="book-text">🦋 Imperatriz Leopoldinense: Prepare o coração para o brilho e a voz única de Ney Matogrosso na Sapucaí!</p>
-            <div class="btn-comprar">👉 Dica da Lê: Ney Matogrosso: A Biografia</div>
-        </div>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Newsletter Carnaval - Leitura</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;900&display=swap" rel="stylesheet">
+</head>
+<body>
+
+<div class="main-container">
+    <header class="header-blue">
+        <div class="logo"></div>
+        <h1 class="newsletter-title">newsletter #fev</h1>
+    </header>
+
+    <div class="intro-box">
+        <p class="intro-text">
+            Oi, pessoal! Aqui é a Lê! 👋 O Carnaval está chegando, mas antes de cair na folia, tenho um recadinho importante: estamos nos últimos dias da nossa campanha de Volta às Aulas! 🎒✏️
+        </p>
+        <div class="btn-primary">GARANTIR MEUS ITENS</div>
     </div>
 
-    <div class="book-row">
-        <div class="book-img ritalee"></div>
-        <div class="book-info">
-            <p class="book-text">🎸 Mocidade Independente de Padre Miguel: Vai levar toda a rebeldia e o talento da nossa eterna Rainha do Rock!</p>
-            <div class="btn-comprar">👉 Dica da Lê: Rita Lee: Uma Autobiografia</div>
+    <section class="carnaval-section">
+        <h2 class="section-title">🎭 O Carnaval da Lê: Biografias que vão Brilhar na Avenida</h2>
+        
+        <div class="book-row">
+            <div class="book-img nermatogross"></div>
+            <div class="book-info">
+                <p class="book-text">🦋 Imperatriz Leopoldinense: Prepare o coração para o brilho e a voz única de Ney Matogrosso na Sapucaí!</p>
+                <div class="btn-comprar">👉 Dica da Lê: Ney Matogrosso: A Biografia</div>
+            </div>
         </div>
-    </div>
 
-    <div class="book-row">
-        <div class="book-img quarto"></div>
-        <div class="book-info">
-            <p class="book-text">✍️ Unidos da Tijuca: Uma homenagem emocionante à força de Carolina Maria de Jesus.</p>
-            <div class="btn-comprar">👉 Dica da Lê: Quarto de Despejo: Diário de uma Favelada</div>
+        <div class="book-row">
+            <div class="book-img ritalee"></div>
+            <div class="book-info">
+                <p class="book-text">🎸 Mocidade Independente de Padre Miguel: Vai levar toda a rebeldia e o talento da nossa eterna Rainha do Rock!</p>
+                <div class="btn-comprar">👉 Dica da Lê: Rita Lee: Uma Autobiografia</div>
+            </div>
         </div>
-    </div>
 
-    <div class="book-row">
-        <div class="book-img lula"></div>
-        <div class="book-info">
-            <p class="book-text">🇧🇷 Acadêmicos de Niterói: A trajetória política e pessoal que marcou o Brasil.</p>
-            <div class="btn-comprar">👉 Dica da Lê: Lula - Volume 1</div>
+        <div class="book-row">
+            <div class="book-img quarto"></div>
+            <div class="book-info">
+                <p class="book-text">✍️ Unidos da Tijuca: Uma homenagem emocionante à força de Carolina Maria de Jesus.</p>
+                <div class="btn-comprar">👉 Dica da Lê: Quarto de Despejo: Diário de uma Favelada</div>
+            </div>
         </div>
-    </div>
-</section>
+
+        <div class="book-row">
+            <div class="book-img lula"></div>
+            <div class="book-info">
+                <p class="book-text">🇧🇷 Acadêmicos de Niterói: A trajetória política e pessoal que marcou o Brasil.</p>
+                <div class="btn-comprar">👉 Dica da Lê: Lula - Volume 1</div>
+            </div>
+        </div>
+    </section>
+</div>
+
+</body>
+</html>
