--- a/index.html
+++ b/index.html
@@ -2,62 +2,45 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Newsletter Carnaval - Leitura</title>
+    <meta name="viewport" content="width=1920">
+    <title>Newsletter Leitura - Carnaval 2026</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;900&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<div class="main-container">
-    <header class="header-blue">
-        <div class="logo"></div>
+    <div class="figma-container">
+        <div class="rectangle-3"></div>
+
+        <div class="confetti-1"></div>
+        <div class="confetti-2"></div>
+        <div class="confetti-3"></div>
+        <div class="confetti-4"></div>
+
+        <div class="rectangle-2"></div>
+        <div class="logo-horizontal"></div>
         <h1 class="newsletter-title">newsletter #fev</h1>
-    </header>
 
-    <div class="intro-box">
-        <p class="intro-text">
-            Oi, pessoal! Aqui é a Lê! 👋 O Carnaval está chegando, mas antes de cair na folia, tenho um recadinho importante: estamos nos últimos dias da nossa campanha de Volta às Aulas! 🎒✏️
-        </p>
-        <div class="btn-primary">GARANTIR MEUS ITENS</div>
+        <p class="intro-text-lê">Oi, pessoal! Aqui é a Lê! 👋 O Carnaval está chegando, mas antes de cair na folia, tenho um recadinho importante: estamos nos últimos dias da nossa campanha de Volta às Aulas! 🎒✏️ Se você ainda não completou a sua lista ou quer aquela mochila nova para começar o semestre com tudo, corre que o estoque está voando e os preços especiais já estão se despedindo. Não deixa para a última hora, hein?</p>
+
+        <p class="intro-text-carnaval">🎭 O Carnaval da Lê: Biografias que vão Brilhar na Avenida "E por falar em folia, você viu que o Carnaval de 2026 vai ser pura cultura? 🎊 Eu andei pesquisando e descobri que os enredos das escolas de samba estão repletos de histórias de vida fascinantes. Para você já entrar no ritmo e conhecer os detalhes de cada homenageado, separei esses destaques imperdíveis. Escolha seu favorito e boa leitura:</p>
+
+        <div class="rect-blue-btn"></div>
+        <span class="text-btn-garantir">GARANTIR MEUS ITENS</span>
+
+        <div class="img-ney"></div>
+        <div class="img-rita"></div>
+        <div class="img-carolina"></div>
+        <div class="img-lula"></div>
+
+        <p class="txt-bio-ney">🦋 Imperatriz Leopoldinense: Prepare o coração para o brilho e a voz única de Ney Matogrosso na Sapucaí! 👉 Dica da Lê: Ney Matogrosso: A Biografia</p>
+        <p class="txt-bio-rita">🎸 Mocidade Independente de Padre Miguel: Vai levar toda a rebeldia e o talento da nossa eterna Rainha do Rock! 👉 Dica da Lê: Rita Lee: Uma Autobiografia</p>
+        <p class="txt-bio-carolina">✍️ Unidos da Tijuca: Uma homenagem emocionante à força de Carolina Maria de Jesus. 👉 Dica da Lê: Quarto de Despejo: Diário de uma Favelada</p>
+        <p class="txt-bio-lula">🇧🇷 Acadêmicos de Niterói: A trajetória política e pessoal que marcou o Brasil. 👉 Dica da Lê: Lula - Volume 1</p>
+
+        <div class="rect-pink-1"></div> <div class="rect-pink-2"></div> <div class="rect-pink-3"></div> <div class="rect-pink-4"></div> <div class="mask-carnival"></div>
+        <div class="fireworks"></div>
     </div>
-
-    <section class="carnaval-section">
-        <h2 class="section-title">🎭 O Carnaval da Lê: Biografias que vão Brilhar na Avenida</h2>
-        
-        <div class="book-row">
-            <div class="book-img nermatogross"></div>
-            <div class="book-info">
-                <p class="book-text">🦋 Imperatriz Leopoldinense: Prepare o coração para o brilho e a voz única de Ney Matogrosso na Sapucaí!</p>
-                <div class="btn-comprar">👉 Dica da Lê: Ney Matogrosso: A Biografia</div>
-            </div>
-        </div>
-
-        <div class="book-row">
-            <div class="book-img ritalee"></div>
-            <div class="book-info">
-                <p class="book-text">🎸 Mocidade Independente de Padre Miguel: Vai levar toda a rebeldia e o talento da nossa eterna Rainha do Rock!</p>
-                <div class="btn-comprar">👉 Dica da Lê: Rita Lee: Uma Autobiografia</div>
-            </div>
-        </div>
-
-        <div class="book-row">
-            <div class="book-img quarto"></div>
-            <div class="book-info">
-                <p class="book-text">✍️ Unidos da Tijuca: Uma homenagem emocionante à força de Carolina Maria de Jesus.</p>
-                <div class="btn-comprar">👉 Dica da Lê: Quarto de Despejo: Diário de uma Favelada</div>
-            </div>
-        </div>
-
-        <div class="book-row">
-            <div class="book-img lula"></div>
-            <div class="book-info">
-                <p class="book-text">🇧🇷 Acadêmicos de Niterói: A trajetória política e pessoal que marcou o Brasil.</p>
-                <div class="btn-comprar">👉 Dica da Lê: Lula - Volume 1</div>
-            </div>
-        </div>
-    </section>
-</div>
 
 </body>
 </html>
