--- a/index.html
+++ b/index.html
@@ -1,46 +1,100 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=1920">
-    <title>Newsletter Leitura - Carnaval 2026</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;900&display=swap" rel="stylesheet">
-</head>
-<body>
-
-    <div class="figma-container">
-        <div class="rectangle-3"></div>
-
-        <div class="confetti-1"></div>
-        <div class="confetti-2"></div>
-        <div class="confetti-3"></div>
-        <div class="confetti-4"></div>
-
-        <div class="rectangle-2"></div>
-        <div class="logo-horizontal"></div>
-        <h1 class="newsletter-title">newsletter #fev</h1>
-
-        <p class="intro-text-lê">Oi, pessoal! Aqui é a Lê! 👋 O Carnaval está chegando, mas antes de cair na folia, tenho um recadinho importante: estamos nos últimos dias da nossa campanha de Volta às Aulas! 🎒✏️ Se você ainda não completou a sua lista ou quer aquela mochila nova para começar o semestre com tudo, corre que o estoque está voando e os preços especiais já estão se despedindo. Não deixa para a última hora, hein?</p>
-
-        <p class="intro-text-carnaval">🎭 O Carnaval da Lê: Biografias que vão Brilhar na Avenida "E por falar em folia, você viu que o Carnaval de 2026 vai ser pura cultura? 🎊 Eu andei pesquisando e descobri que os enredos das escolas de samba estão repletos de histórias de vida fascinantes. Para você já entrar no ritmo e conhecer os detalhes de cada homenageado, separei esses destaques imperdíveis. Escolha seu favorito e boa leitura:</p>
-
-        <div class="rect-blue-btn"></div>
-        <span class="text-btn-garantir">GARANTIR MEUS ITENS</span>
-
-        <div class="img-ney"></div>
-        <div class="img-rita"></div>
-        <div class="img-carolina"></div>
-        <div class="img-lula"></div>
-
-        <p class="txt-bio-ney">🦋 Imperatriz Leopoldinense: Prepare o coração para o brilho e a voz única de Ney Matogrosso na Sapucaí! 👉 Dica da Lê: Ney Matogrosso: A Biografia</p>
-        <p class="txt-bio-rita">🎸 Mocidade Independente de Padre Miguel: Vai levar toda a rebeldia e o talento da nossa eterna Rainha do Rock! 👉 Dica da Lê: Rita Lee: Uma Autobiografia</p>
-        <p class="txt-bio-carolina">✍️ Unidos da Tijuca: Uma homenagem emocionante à força de Carolina Maria de Jesus. 👉 Dica da Lê: Quarto de Despejo: Diário de uma Favelada</p>
-        <p class="txt-bio-lula">🇧🇷 Acadêmicos de Niterói: A trajetória política e pessoal que marcou o Brasil. 👉 Dica da Lê: Lula - Volume 1</p>
-
-        <div class="rect-pink-1"></div> <div class="rect-pink-2"></div> <div class="rect-pink-3"></div> <div class="rect-pink-4"></div> <div class="mask-carnival"></div>
-        <div class="fireworks"></div>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="globals.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="box">
+      <div class="email">
+        <div class="fundo">
+          <div class="rectangle"></div>
+          <img class="confetti" src="img/confetti13-1.png" />
+          <img class="img" src="img/confetti13-3.png" />
+          <img class="confetti-2" src="img/confetti13-4.png" />
+          <img class="confetti-3" src="img/confetti13-2.png" />
+          <div class="div"></div>
+        </div>
+        <div class="bloco">
+          <img class="fireworks" src="img/fireworks-1.png" />
+          <div class="rectangle-2"></div>
+          <p class="acad-micos-de-niter">
+            <span class="text-wrapper"
+              >🇧🇷 Acadêmicos de Niterói: A trajetória política e pessoal que marcou o Brasil.<br /><br />👉 Dica da Lê:
+            </span>
+            <span class="span">&nbsp;&nbsp;</span>
+            <span class="text-wrapper-2">&nbsp;&nbsp; Lula - Volume 1</span>
+          </p>
+          <img class="lula" src="img/lula.png" />
+        </div>
+        <div class="bloco-2">
+          <img class="quarto" src="img/quarto.png" />
+          <div class="rectangle-3"></div>
+          <p class="unidos-da-tijuca-uma">
+            <span class="text-wrapper"
+              >✍️ Unidos da Tijuca: Uma homenagem emocionante à força de Carolina Maria de Jesus.<br /><br />👉 Dica da
+              Lê:</span
+            >
+            <span class="span">&nbsp;&nbsp;</span>
+            <span class="text-wrapper-3"> Quarto de Despejo: Diário de uma Favelada</span>
+          </p>
+        </div>
+        <div class="bloco-3">
+          <div class="rectangle-4"></div>
+          <img class="ritalee" src="img/ritalee.png" />
+          <p class="mocidade">
+            <span class="text-wrapper"
+              >🎸 Mocidade Independente de Padre Miguel: Vai levar toda a rebeldia e o talento da nossa eterna Rainha do
+              Rock!<br /><br />👉 Dica da Lê:&nbsp;&nbsp;</span
+            >
+            <span class="text-wrapper-2">&nbsp;</span>
+            <a href="https://leitura.com.br/rita-lee-L999-9788525063304" target="_blank" rel="noopener noreferrer"
+              ><span class="text-wrapper-4">Rita Lee: Uma Autobiografia</span></a
+            >
+          </p>
+          <img class="mask-carnival" src="img/mask-carnival-1.png" />
+        </div>
+        <div class="bloco-4">
+          <div class="rectangle-5"></div>
+          <p class="imperatriz">
+            <span class="text-wrapper"
+              >🦋 Imperatriz Leopoldinense: Prepare o coração para o brilho e a voz única de Ney Matogrosso na Sapucaí!
+              <br /><br />👉 Dica da Lê:&nbsp;&nbsp;
+            </span>
+            <span class="text-wrapper-2">&nbsp;</span>
+            <a href="https://leitura.com.br/ney-matogrosso-L999-9786559210923" target="_blank" rel="noopener noreferrer"
+              ><span class="text-wrapper-4">Ney Matogrosso: A Biografia</span></a
+            >
+          </p>
+          <img class="neymatogross" src="img/neymatogross.png" />
+        </div>
+        <div class="o-carnaval-da-l-wrapper">
+          <img
+            class="o-carnaval-da-l"
+            src="img/o-carnaval-da-l-biografias-que-v-o-brilhar-na-avenida-e-por-falar-em-folia-voc-viu-que-o-carnaval-de-2026-vai-ser-pura-cultura-eu-andei-pesquisando-e-descobri-que-os-enredos-das-escolas-de-samba-est-o-repletos-de-hist-rias-de-vida-fascinantes-para-voc-j-entrar-no-ritmo-e-conhecer-os-detalhes-de-cada-homenageado-separei-esses-destaques-imperd-veis-escolha-seu-favorito-e-boa-leitura.png"
+          />
+        </div>
+        <div class="bloco-5">
+          <div class="rectangle-6"></div>
+          <a href="https://leitura.com.br/index.php?route=common/home" target="_blank" rel="noopener noreferrer"
+            ><div class="text-wrapper-5">GARANTIR MEUS ITENS</div></a
+          >
+          <p class="oi-pessoal-aqui-a-l">
+            <span class="text-wrapper-6">Oi, pessoal! Aqui é a Lê! 👋<br /></span>
+            <span class="text-wrapper-7"
+              ><br />O Carnaval está chegando, mas antes de cair na folia, tenho um recadinho importante: estamos nos
+              últimos dias da nossa campanha de Volta às Aulas! 🎒✏️<br />Se você ainda não completou a sua lista ou
+              quer aquela mochila nova para começar o semestre com tudo, corre que o estoque está voando e os preços
+              especiais já estão se despedindo. Não deixa para a última hora, hein?</span
+            >
+          </p>
+          <img class="LOGO-HORIZONTAL" src="img/LOGO-HORIZONTAL-BEIGE-1.png" />
+          <div class="text-wrapper-8">newsletter #fev</div>
+        </div>
+      </div>
     </div>
-
-</body>
+  </body>
 </html>
+
